modules/cabotage/manifests/vault/05-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vault
    cabotage.io/infra: "true"
  namespace: cabotage
  name: vault
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8200
    name: https
  - port: 8201
    protocol: TCP
    targetPort: 8201
    name: cluster
  selector:
    app: vault
  publishNotReadyAddresses: true
